// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test PolygonOptions should render correctly 1`] = `
<div>
  <div>
    <div
      class="polygon-sides"
    >
      <div
        class="label"
        title="Sides"
      >
        <svgr-url />
      </div>
      <div
        class="option-input ui ui-control-unit-input-v2"
      >
        <input
          step="1"
          type="text"
          value="5"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`test PolygonOptions should render correctly 2`] = `
<div>
  <div>
    <div
      class="polygon-sides"
    >
      <div
        class="label"
        title="Sides"
      >
        <svgr-url />
      </div>
      <div
        class="option-input ui ui-control-unit-input-v2"
      >
        <input
          step="1"
          type="text"
          value="5"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`test PolygonOptions should render correctly 3`] = `
<div>
  <div>
    <div
      class="polygon-sides"
    >
      <div
        class="label"
        title="Sides"
      >
        <svgr-url />
      </div>
      <div
        class="option-input ui ui-control-unit-input-v2"
      >
        <input
          step="1"
          type="text"
          value="8"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`test PolygonOptions should render correctly 4`] = `
<div>
  <div>
    <div
      class="polygon-sides"
    >
      <div
        class="label"
        title="Sides"
      >
        <svgr-url />
      </div>
      <div
        class="option-input ui ui-control-unit-input-v2"
      >
        <input
          step="1"
          type="text"
          value="5"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`test PolygonOptions should render correctly in mobile 1`] = `
<div>
  <div>
    mock-object-panel-number-item
    <br />
    id:
    polygon-sides
    label:
    Sides
    min:
    3
    max:
    9007199254740991
    decimal:
    0
    value:
    5
    unit:
    hasMultiValue:
    false
    <input />
  </div>
</div>
`;

exports[`test PolygonOptions should render correctly in mobile 2`] = `
<div>
  <div>
    mock-object-panel-number-item
    <br />
    id:
    polygon-sides
    label:
    Sides
    min:
    3
    max:
    9007199254740991
    decimal:
    0
    value:
    5
    unit:
    hasMultiValue:
    false
    <input />
  </div>
</div>
`;
